# stm32F411RE-cmake-test

./: .gitignore  CMakeLists.txt  README.md  arm-none-eabi-gcc.cmake
core/inc/: CMakeLists.txt  logger.hpp  main.hpp
core/src/: CMakeLists.txt  logger.cpp  main.cpp  stm32f4xx_it.c
drivers/: CMakeLists.txt
drivers/CMSIS/: CMakeLists.txt
drivers/device/: CMakeLists.txt
drivers/device/STM32F4xx_HAL_Driver/Inc/config/: stm32f4xx_hal_conf.h
tools/openocd/: flash.cfg
